Commit of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/b1.Integris_3000_Display.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/b2.QSG Exercise.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/b3.Menus&Menu_Selector.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/b4.Display Size.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/b5.Reset.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/c1.System_Status_Pane.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/c10.Display-ConfigFiles-WIP.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/c11a.Snapshot.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/c11b.Recording.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/c2a.Set Link Rate.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/c2b.Set AxC no.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/c2c.Load Config File.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/c3.Selecting Graph Type.htm file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/30_3000/c4.Spectrum Setup.htm file:///C:/Users/Haz/Documents/_Madcap Project

--- a/Content/30_3000/b1.Integris_3000_Display.htm
+++ b/Content/30_3000/b1.Integris_3000_Display.htm
@@ -14,7 +14,7 @@
 				</MadCap:xref>)</MadCap:conditionalText></p><table style="margin-left: auto;margin-right: auto;"><col></col><tbody><tr><td style="text-align: center;"><img src="../Resources/Images/Labelled_Screen_Display.jpg" style="width: 500px;height: auto;clear: both;margin-top: 10px;margin-bottom: 0px;" MadCap:mediastyle="@media print { height: auto;width: 500px; }"></img></td></tr><tr style="height: 14px;"><td style="text-align: center;"><p class="FigNum01" MadCap:autonum=" Fig 1.1 "><a name="The_Integris_3000_Screen"></a>The Integris 3000 Screen</p></td></tr></tbody></table></li>
             <li><b>Record Trace &amp;&#160;Snapshot:</b> Record a trace file to be replayed later,
 				 or take and display screen shots.
-<p MadCap:conditions="Default.Print"><MadCap:conditionalText>(See: <MadCap:xref href="c10.Snapshot.htm" class="XREF_Range">Taking a Screen Snapshot on page 1) </MadCap:xref></MadCap:conditionalText></p><p MadCap:conditions="Default.Screen"><MadCap:xref href="c10.Snapshot.htm" class="XREF_Range"> <![CDATA[ ]]></MadCap:xref><MadCap:conditionalText><MadCap:xref href="c10.Snapshot.htm" class="XREF_Range">(See: <MadCap:xref href="c10.Snapshot.htm">Taking a Screen Snapshot
+<p MadCap:conditions="Default.Print"><MadCap:conditionalText>(See: <MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range">Taking a Screen Snapshot on page 1) </MadCap:xref></MadCap:conditionalText></p><p MadCap:conditions="Default.Screen"><MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range"> </MadCap:xref><MadCap:conditionalText><MadCap:xref href="c11a.Snapshot.htm" class="XREF_Range">(See: <MadCap:xref href="c11a.Snapshot.htm">Taking a Screen Snapshot
 				</MadCap:xref></MadCap:xref></MadCap:conditionalText>)
            </p></li>
             <li>
@@ -38,11 +38,11 @@
                 <p><b>Crosshairs</b>: These can be enabled or disable on <b>Graph &gt; Crosshair</b>. The crosshairs follow the mouse position 
 			and the X&#160;&amp;&#160;Y values are displayed at position (6) (see below).</p>
                 <p MadCap:conditions="Default.Print">
-                    <MadCap:conditionalText>(See:  <MadCap:xref href="c7.Crosshairs.htm" class="XREF_Range">"Using the Crosshairs" on page 1
+                    <MadCap:conditionalText>(See:  <MadCap:xref href="c7.Multi-Screen -WIP.htm" class="XREF_Range">"Using the Crosshairs" on page 1
 			</MadCap:xref>)</MadCap:conditionalText>
                 </p>
                 <p MadCap:conditions="Default.Screen">
-                    <MadCap:conditionalText>(See:  <MadCap:xref href="c7.Crosshairs.htm">Using the Crosshairs</MadCap:xref>)</MadCap:conditionalText>
+                    <MadCap:conditionalText>(See:  <MadCap:xref href="c7.Multi-Screen -WIP.htm">Using the Crosshairs</MadCap:xref>)</MadCap:conditionalText>
                 </p>
             </li>
             <li><b>Crosshair Values</b>: These show the X&#160;&amp;&#160;Y values at the mouse / crosshair position (5) (see above).</li>
