--- a/Content/30_3000/b3.Menus&Menu_Selector.htm
+++ b/Content/30_3000/b3.Menus&Menu_Selector.htm
@@ -4,8 +4,8 @@
         <link href="../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" /><title>The Menu Selector</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Switching Between  Menu Types</h2>
-        <h2 class="AA_Online_H2">Switching Between  Menu Types</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Switching Between  Menu Types</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Switching Between  Menu Types</h2>
         <p>The Integris 3000 can be configured to use either the Classic Integris menu or a 'Modern' menu system. You can change between the two types using the Preferences menu item. This is located at:</p>
         <ul>
             <li><i>System &gt; Prefs</i> using the Classic menu system <MadCap:xref href="#Classic_Menu" class="ListOfPageNumber">(See  Figure 1.1. ) </MadCap:xref></li>
@@ -30,14 +30,14 @@
             <col />
             <tr>
                 <td style="text-align: center;">
-                    <img src="../../Resources/Images/3000/System_Menu_Classic_menuselect.jpg" style="height: auto;float: center;clear: both;margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;width: 150px;" MadCap:mediastyle="@media print { height: auto;width: 150px; }">
+                    <img src="../Resources/Images/3000/System_Menu_Classic_menuselect.jpg" style="height: auto;float: center;clear: both;width: 150px;margin-left: 0px;margin-right: 0px;margin-top: 20px;margin-bottom: 0px;" MadCap:mediastyle="@media print { height: auto;width: 150px; }">
                     </img>
                 </td>
                 <td style="text-align: center;width: 100px;">
-                    <img src="../../Resources/Images/_whitespace.jpg" MadCap:mediastyle="@media print { width: 30px;height: auto; }" />
+                    <img src="../Resources/Images/_whitespace.jpg" MadCap:mediastyle="@media print { width: 30px;height: auto; }" />
                 </td>
                 <td style="text-align: center;width: 500px;">
-                    <img src="../../Resources/Images/3000/Modern_Prefs.jpg" style="height: auto;float: center;clear: both;margin-left: 0px;margin-right: 5px;margin-top: 0px;margin-bottom: 5px;width: 180px;" MadCap:mediastyle="@media print { height: auto;width: 130px; }">
+                    <img src="../Resources/Images/3000/Modern_Prefs.jpg" style="height: auto;float: center;clear: both;margin-left: 0px;margin-right: 5px;margin-top: 0px;margin-bottom: 5px;width: 180px;" MadCap:mediastyle="@media print { height: auto;width: 130px; }">
                     </img>
                 </td>
             </tr>
@@ -53,22 +53,23 @@
                 </td>
             </tr>
         </table>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.2. ">The Menu Selector (Classic Menus Only)</h2>
-        <h2 class="AA_Online_H2">The Menu Selector (Classic Menus Only)</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.2. " MadCap:conditions="Default.Print">The Menu Selector (Classic Menus Only)</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">The Menu Selector (Classic Menus Only)</h2>
         <p>Seven menus are available in the <i>Classic View</i> and Nine in the <i>Modern View</i>.</p>
-        <p> You can change which of the <i>Classic</i> menus are displayed to the right of the screen by clicking on  the corresponding menu group on the <i>Menu Selector.</i></p>
+        <p> When using the <i>Classic Menus</i> a manu bar appears at the bottom of the screen that allows you to select the desired menu, which then appears to the top right of the screen. </p>
+        <p>When using the <i>Modern Menus</i> individual menus are selected from a menu bar located at the top of the screen</p>
         <table style="width: 100%;margin-left: 0;margin-right: auto;mc-table-style: url('../../Resources/Table Stylesheets/Image&amp;LabelStyle01.css');" class="TableStyle-Image_&amp;_LabelStyle01" cellspacing="0">
             <col class="TableStyle-Image_&amp;_LabelStyle01-Column-Column1" />
             <tbody>
                 <tr class="TableStyle-Image_&amp;_LabelStyle01-Body-Body1">
                     <td style="text-align: center;" class="TableStyle-Image_&amp;_LabelStyle01-BodyD-Column1-Body1">
-                        <img src="../../Resources/Images/3000/Menu_Selector_Classic01.jpg" style="width: 500px;height: auto;clear: both;margin-top: 10px;margin-bottom: 5px;" MadCap:mediastyle="@media print { width: 500px;height: auto; }">
+                        <img src="../Resources/Images/3000/Menu_Selector_Classic01.jpg" style="width: 500px;height: auto;clear: both;margin-top: 10px;margin-bottom: 5px;" MadCap:mediastyle="@media print { width: 500px;height: auto; }">
                         </img>
                     </td>
                 </tr>
                 <tr class="TableStyle-Image_&amp;_LabelStyle01-Body-Body1">
                     <td class="TableStyle-Image_&amp;_LabelStyle01-BodyA-Column1-Body1">
-                        <p class="FigNum01" MadCap:autonum=" Fig 1.3 ">The Menu Selector</p>
+                        <p class="FigNum01" MadCap:autonum=" Fig 1.3 ">The <i>Classic Menu</i> Selector</p>
                     </td>
                 </tr>
             </tbody>
