--- a/Content/30_3000/c2b.Set AxC no.htm
+++ b/Content/30_3000/c2b.Set AxC no.htm
@@ -1,24 +1,39 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="635" MadCap:lastWidth="624">
-    <head><title>The Help Menu</title>
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="634" MadCap:lastWidth="624">
+    <head>
+        <link href="../Resources/Table Stylesheets/InfoBoxStyle01.css" rel="stylesheet" MadCap:stylesheetType="table" /><title>The Help Menu</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Setting the AxC#</h2>
-        <h2 class="AA_Online_H2">Setting the AxC#</h2>
-        <p>You can set which Antenna System Container (AxC) to monitor from the <i>Radio</i> dropdown on the CPRI menu.</p>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Setting the AxC#</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Setting the AxC#</h2>
         <h3>AxC / Radio Number</h3>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
+            <col style="width: 15%;" />
             <col />
+            <col style="width: 25%;" />
             <tbody>
                 <tr>
-                    <td style="font-size: 11pt;"><b>Menu Location</b>
+                    <td><b style="font-size: 11pt;">Location</b>
+                    </td>
+                    <td style="font-size: 10pt;">&#160;</td>
+                    <td>&#160;</td>
+                </tr>
+                <tr>
+                    <td style="font-size: 10pt">GUI or Keyboard</td>
+                    <td style="font-size: 10pt;"><i>None</i>
+                    </td>
+                    <td rowspan="3">&#160;</td>
+                </tr>
+                <tr>
+                    <td style="font-size: 10pt;">Classic menu</td>
+                    <td style="font-size: 10pt;"><b>Source &gt; AxC</b>
                     </td>
                 </tr>
                 <tr>
-                    <td style="font-style: italic;font-size: 11pt;">Classic  Menu <b>CPRI &gt; Radio</b></td>
-                </tr>
-                <tr>
-                    <td style="font-style: italic;font-size: 11pt;">Modern Menu <b>CPRI &gt; Radio</b></td>
+                    <td style="font-size: 10pt">Modern menu
+                    </td>
+                    <td style="font-size: 10pt;"><b>Source &gt; AxC</b>
+                    </td>
                 </tr>
             </tbody>
         </table>
@@ -28,12 +43,24 @@
             <tbody>
                 <tr>
                     <td style="vertical-align: top;">
+                        <p style="vertical-align: top;">You can set which Antenna System Container (AxC) to monitor from the <i>AxC</i> dropdown on the <i>Source</i> menu.</p>
                         <p style="vertical-align: top;">To set the AxC / Radio number:</p>
                         <ol>
                             <li style="vertical-align: top;">Go to the <b>CPRI</b> menu on either the <i>Classic</i> or <i>Modern</i> menu systems.</li>
                             <li style="vertical-align: top;">Click on the <b>Radio</b> menu item.</li>
                             <li style="vertical-align: top;">Select the desired AxC / Radio number from the list.</li>
                         </ol>
+                        <table style="width: 100%;margin-left: 0;margin-right: auto;                  mc-table-style:          url('../Resources/Table Stylesheets/InfoBoxStyle01.css');" class="TableStyle-InfoBoxStyle01" cellspacing="0">
+                            <col class="TableStyle-InfoBoxStyle01-Column-Column1" />
+                            <tbody>
+                                <tr class="TableStyle-InfoBoxStyle01-Body-Body1">
+                                    <td class="TableStyle-InfoBoxStyle01-BodyA-Column1-Body1">
+                                        <p><b>Information:</b>
+			 The number of available CPRI AxC containers in a frame vary depending on the selected link speed.</p>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                         <p style="vertical-align: top;">&#160;</p>
                     </td>
                     <td style="vertical-align: top;">
@@ -42,7 +69,7 @@
                             <tbody>
                                 <tr>
                                     <td style="text-align: center;">
-                                        <img src="../../Resources/Images/3000/3.1/3k_radio%23.jpg" MadCap:mediastyle="@media print { height: 250px;width: 101px; }" style="margin-bottom: 5px;height: 250px;width: 101px;" />
+                                        <img src="../Resources/Images/3000/V4/V4-AxC-select.jpg" MadCap:mediastyle="@media print { height: 250px;width: auto; }" style="margin-bottom: 5px;height: 250px;width: auto;" />
                                     </td>
                                 </tr>
                                 <tr>
