--- a/Content/30_3000/c3.Selecting Graph Type.htm
+++ b/Content/30_3000/c3.Selecting Graph Type.htm
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="5" MadCap:lastHeight="845" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="5" MadCap:lastHeight="718" MadCap:lastWidth="624">
     <head><title>The Help Menu</title>
     </head>
     <body style="text-align: center;">
-        <h2 class="AA_h2_ChandPara" style="text-align: left;" MadCap:autonum="1.1. ">Selecting the Graph Type</h2>
-        <h2 class="AA_Online_H2" style="text-align: left;">Selecting the Graph Type</h2>
+        <h2 class="AA_h2_ChandPara" style="text-align: left;" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Selecting the Graph Type</h2>
+        <h2 class="AA_Online_H2" style="text-align: left;" MadCap:conditions="Default.Screen">Selecting the Graph Type</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col />
             <tbody>
@@ -20,13 +20,22 @@
                 </tr>
             </tbody>
         </table>
-        <p style="vertical-align: top;text-align: left;">Integris 3000 allows you to select the graph type or a combination of graph types. Each type  supports a different aspects of signal analysis.</p>
+        <p style="vertical-align: top;text-align: left;">Integris 3000 allows you to select the graph type or a combination of graph types. Each type  supports a different aspect of signal analysis.</p>
         <p style="text-align: left;"><b>Spectrum</b>: The power magnitude of the input signal is displayed across the set frequency range</p>
         <p style="text-align: left;"><b>Waterfall</b>: Spectrogram giving a visual representation of frequency in the X axis against time in the Y axis</p>
         <p style="text-align: left;"><b>Persistence</b>: Power magnitude is plotted against frequency, with color denoting the percentage of time a plot point is placed at the current location</p>
-        <p style="vertical-align: top;text-align: center;">
-            <img src="../../Resources/Images/3000/3.1/3k_GraphType.jpg" style="width: 300px;height: auto;margin-top: 10px;margin-bottom: 10px;" />
-        </p>
+        <table style="margin-left: auto;margin-right: auto;">
+            <col />
+            <tr>
+                <td style="text-align: center;width: 500px;">
+                    <img src="../Resources/Images/3000/V4/V4-Graph-Type.jpg" style="float: center;clear: both;margin-left: 0px;margin-right: 0px;margin-top: 0px;margin-bottom: 0px;width: auto;height: 200px;" MadCap:mediastyle="@media print { width: auto;height: 200px; }">
+                    </img>
+                </td> <![CDATA[ ]]></tr>
+            <tr>
+                <td style="text-align: center;width: 500px;">
+                    <p class="FigNum01" MadCap:autonum=" Fig 1.1 ">Selecting a graph type        </p>
+                </td> <![CDATA[ ]]></tr>
+        </table>
         <p style="vertical-align: top;text-align: left;">To select the Graph type:</p>
         <ol>
             <li style="vertical-align: top;text-align: left;">Go to the <b>Graph</b> menu on either the <i>Classic</i> or <i>Modern</i> menu systems.</li>
