--- a/Content/30_3000/c5.Spectrum Values.htm
+++ b/Content/30_3000/c5.Spectrum Values.htm
@@ -1,34 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="9" MadCap:lastHeight="634" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="9" MadCap:lastHeight="838" MadCap:lastWidth="624">
     <head><title>The Help Menu</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Setting Spectrum Parameters</h2>
-        <h2 class="AA_Online_H2">Setting Spectrum Parameters</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Setting Spectrum Parameters</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Setting Spectrum Parameters</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
-            <col />
             <col />
             <tbody>
                 <tr>
                     <td style="font-size: 11pt;"><b>Menu Location</b>
                     </td>
-                    <td>&#160;</td>
                 </tr>
                 <tr>
-                    <td style="font-style: italic;font-size: 11pt;font-weight: bold;">Modern TRACE Menu&#160;&gt;&#160;Trace</td>
-                    <td>&#160;</td>
+                    <td style="font-style: italic;font-size: 11pt;">Classic  Menu <b>Trace &gt; Configure</b></td>
                 </tr>
                 <tr>
-                    <td style="font-style: italic;font-size: 11pt;font-weight: bold;">Classic TRACE&#160;Menu &gt;&#160;Trace</td>
-                    <td>&#160;</td>
+                    <td style="font-style: italic;font-size: 11pt;">Modern Menu <b>Traces&gt; Trace</b></td>
                 </tr>
             </tbody>
         </table>
         <p>The <i>Integris 3000</i> can display more than just the default real-time spectrum. Using the <i>Trace Control Panel</i> you can overlay or remove <i>Maximum</i>, <i>Minimum</i>, Real-Time and <i>Average</i>  spectra.</p>
-        <p>To open the <i>Trace Control Panel</i>:</p>
+        <h3>To select a configuration on the <i>Classic menu</i> system:</h3>
         <ol>
-            <li>Open the <b>Trace</b> menu.</li>
-            <li>Click on the <b>Trace</b> menu item. This will open the <i>Trace Control Panel</i> panel. </li>
+            <li>Open the <b>Traces</b> menu and click on the <b>Trace</b> menu item. This will open a selection of graph values as described above</li>
+            <li>On the <i>Traces</i> menu click on the <b>Enable</b> to display the related values. You can open any combination, or all values on the same graph <MadCap:xref href="#Claspec" class="ListOfPageNumber">(See  Fig 1.1 )</MadCap:xref>.</li>
+        </ol>
+        <table style="width: 100%;margin-left: 0;margin-right: auto;">
+            <col />
+            <tbody>
+                <tr>
+                    <td style="text-align: center;">
+                        <img src="../Resources/Images/3000/V4/V4-Classic-Tracetype.jpg" MadCap:mediastyle="@media print { height: auto;width: 250px; }" style="height: auto;width: 250px;" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p class="FigNum01" MadCap:autonum=" Fig 1.1 "><a name="Claspec"></a>Classic menu showing Real Time and Maximum values</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <h3>To select a configuration using the <i>Modern Trace Control Panel</i>:</h3>
+        <ol>
+            <li>Open the <b>Trace</b> menu and click on the <b>Trace</b> menu item. This will open the <i>Trace Control Panel</i> panel <MadCap:xref href="#modspec" class="ListOfPageNumber">(See  Fig 1.2 )</MadCap:xref>. </li>
             <li>You now have a number of options:</li>
             <ul>
                 <li>Click on <b>Enable</b> to activate the desired spectrum type. </li>
@@ -37,9 +52,20 @@
             </ul>
             <li>Click on the <b>All Off</b> menu item to deactivate all Spectra (The Trace Control Panel remains on the screen).</li>
         </ol>
-        <p style="text-align: center;">
-            <img src="../../Resources/Images/3000/3.1/3k_ModernTraceTypeGUI.jpg" MadCap:mediastyle="@media print { width: 400px;height: auto; }" style="width: 300px;height: auto;" />
-        </p>
-        <p class="FigNum01" MadCap:autonum=" Fig 1.1 ">Spectrum showing all values selected</p>
+        <table style="width: 100%;margin-left: 0;margin-right: auto;">
+            <col />
+            <tbody>
+                <tr>
+                    <td style="text-align: center;">
+                        <img src="../Resources/Images/3000/3.1/3k_ModernTraceTypeGUI.jpg" MadCap:mediastyle="@media print { width: 400px;height: auto; }" style="width: 300px;height: auto;" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p class="FigNum01" MadCap:autonum=" Fig 1.2 "><a name="modspec"></a>Spectrum showing all values selected</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </body>
 </html>
