--- a/Content/30_3000/c6.Waterfall Setup.htm
+++ b/Content/30_3000/c6.Waterfall Setup.htm
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="9" MadCap:lastHeight="730" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="9" MadCap:lastHeight="807" MadCap:lastWidth="624">
     <head><title>The Help Menu</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Setting Waterfall Graph Parameters</h2>
-        <h2 class="AA_Online_H2">Setting Waterfall Graph Parameters</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Setting Waterfall Graph Parameters</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Setting Waterfall Graph Parameters</h2>
         <p>The Waterfall graph type gives a visual representation of frequency in the X axis over time in the Y axis. It is useful for seeing small changes in signal amplitude as well as picking out intermittent interferers.</p>
         <p style="text-align: center;">
-            <img src="../../Resources/Images/3000/3.1/3k_Waterfall.jpg" style="width: 400px;height: auto;" />
+            <img src="../Resources/Images/3000/3.1/3k_Waterfall.jpg" style="width: 400px;height: auto;" />
         </p>
         <p class="FigNum01" MadCap:autonum=" Fig 1.1 ">Waterfall Graph</p>
         <p>Above the top left of the waterfall graph is a scale indicating the power values related to each color on the waterfall. <MadCap:xref href="#Color" class="ListOfPageNumber">(See  Fig 1.2 )</MadCap:xref></p>
@@ -16,12 +16,7 @@
             <tbody>
                 <tr>
                     <td style="text-align: center;">
-                        <img src="../../Resources/Images/3000/3.1/3k_WaterfallRefresh-sml.jpg" />
-                    </td>
-                </tr>
-                <tr>
-                    <td style="text-align: center;">
-                        <img src="../../Resources/Images/3000/3.1/3k_WaterfallRefresh.jpg" MadCap:mediastyle="@media print { height: auto;width: 250px; }" style="height: 250pt;width: 200px;" />
+                        <img src="../Resources/Images/3000/3.1/3k_WaterfallRefresh.jpg" MadCap:mediastyle="@media print { height: auto;width: 250px; }" style="height: 250pt;width: 200px;" />
                     </td>
                 </tr>
                 <tr>
@@ -31,14 +26,15 @@
                 </tr>
             </tbody>
         </table>
-        <p>To the right of the color chart is the setting for the period between lines being added to the top of the waterfall. Reducing the period has the effect of speeding the waterfall up and can be useful when monitoring for short period interferers. </p>
-        <p>When you hover the mouse over the waterfall the frequency at the current location is shown at the top right of the screen. This gives a quick frequency reading for the current location and is again useful for identifying short period or intermittent interferers. <MadCap:xref href="#freq" class="ListOfPageNumber">(See  Fig 1.3 )</MadCap:xref></p>
+        <p>To the right of the color chart is the current refresh value setting in milliseconds (ms). Click on this icon to open a dropdown list enabling you to select a new value.</p>
+        <p>The refresh rate sets the period between lines being added to the top of the waterfall. Reducing the period has the effect of speeding the waterfall up and can be useful when monitoring for short period interferers. </p>
+        <p>When you hover the mouse over the waterfall the frequency offsedt at the current location is shown at the top right of the screen. This gives a quick frequency reading for the current location and is again useful for identifying short period or intermittent interferers. <MadCap:xref href="#freq" class="ListOfPageNumber">(See  Fig 1.3 )</MadCap:xref></p>
         <table style="margin-left: auto; margin-right: auto;">
             <col style="width: 420px;" />
             <tbody>
                 <tr>
                     <td style="text-align: center;">
-                        <img src="../../Resources/Images/3000/3.1/3k_WaterfallFreq.jpg" MadCap:mediastyle="@media print { width: 160px;height: 117px; }" style="width: 160px;height: 117px;" />
+                        <img src="../Resources/Images/3000/3.1/3k_WaterfallFreq.jpg" MadCap:mediastyle="@media print { width: 130px;height: auto; }" style="height: auto;width: 130px;" />
                     </td>
                 </tr>
                 <tr>
