--- a/Content/30_3000/b5.Reset.htm
+++ b/Content/30_3000/b5.Reset.htm
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="482" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="406" MadCap:lastWidth="624">
     <head><title>System Reset</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">System Reset</h2>
-        <h2 class="AA_Online_H2">System Reset</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">System Reset</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">System Reset</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col />
             <col />
@@ -24,16 +24,13 @@
                 </tr>
             </tbody>
         </table>
-        <p style="vertical-align: top;">System reset allows you to return the system to factory defaults and then restarts the <i>Integris 3000</i> application.</p>
-        <p style="vertical-align: top;text-align: center;">
-            <img src="../../Resources/Images/3000/3.1/3k_Reset-Warning-sml.jpg" />
-        </p>
+        <p style="vertical-align: top;">System reset allows you to return the system to factory defaults. It then restarts the <i>Integris 3000</i> application in an 'As Shipped' state.</p>
         <table class="FigureTable">
             <col />
             <tbody>
                 <tr>
                     <td style="text-align: center;">
-                        <img src="../../Resources/Images/3000/3.1/3k_Reset-Warning.jpg" MadCap:mediastyle="@media print { height: auto;width: 400px; }" style="height: 250pt;width: 300px;" />
+                        <img src="../Resources/Images/3000/3.1/3k_Reset-Warning.jpg" MadCap:mediastyle="@media print { height: auto;width: 400px; }" style="height: 250pt;width: 300px;" />
                     </td>
                 </tr>
                 <tr>
