--- a/Content/30_3000/c11b.Recording.htm
+++ b/Content/30_3000/c11b.Recording.htm
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="641" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="690" MadCap:lastWidth="624">
     <head><title>Screen Snapshot</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Recording RF&#160;Data</h2>
-        <h2 class="AA_Online_H2">Recording RF&#160;Data</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Recording RF&#160;Data</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Recording RF&#160;Data</h2>
         <p>You can record traces to be replayed later, or loaded into <i>Integris Expert</i> for analysis. </p>
         <table style="width: 100%; margin-left: 0; margin-right: auto;">
             <col>
@@ -12,7 +12,13 @@
             <tbody>
                 <tr>
                     <td class="NOTE">
-                        <p style="font-weight: normal;"><b>Note</b>: This feature is different to Capturing Bit Stream <b>Help &gt; Debug</b>. <MadCap:conditionalText>(See <MadCap:xref href="c12.Export Debug File.htm" class="XREF_Range">"Exporting a File for Debug" on page 1</MadCap:xref>)</MadCap:conditionalText> <MadCap:conditionalText>(See:              <MadCap:xref href="c12.Export Debug File.htm">Exporting a File for Debug</MadCap:xref>)</MadCap:conditionalText></p>
+                        <p style="font-weight: normal;"><b>Note</b>: This feature is different to Capturing Bit Stream <b>Help &gt; Debug</b>.</p>
+                        <p style="font-weight: normal;" MadCap:conditions="Default.Print">
+                            <MadCap:conditionalText>(See <MadCap:xref href="c12.Export Debug File.htm" class="XREF_Range">"Exporting a File for Debug" on page 1</MadCap:xref>)</MadCap:conditionalText>
+                        </p>
+                        <p style="font-weight: normal;" MadCap:conditions="Default.Screen">
+                            <MadCap:conditionalText>(See:              <MadCap:xref href="c12.Export Debug File.htm">Exporting a File for Debug</MadCap:xref>)</MadCap:conditionalText>
+                        </p>
                     </td>
                 </tr>
             </tbody>
@@ -40,7 +46,7 @@
                             <tbody>
                                 <tr>
                                     <td style="text-align: center;">
-                                        <img src="../../Resources/Images/3000/3.1/3k_RecordControls.jpg" MadCap:mediastyle="@media print { height: auto;width: 220px; }" style="margin-bottom: 5px;height: auto;width: 220px;" />
+                                        <img src="../Resources/Images/3000/3.1/3k_RecordControls.jpg" MadCap:mediastyle="@media print { height: auto;width: 220px; }" style="margin-bottom: 5px;height: auto;width: 220px;" />
                                     </td>
                                 </tr>
                                 <tr>
