--- a/Content/30_3000/c2a.Set Link Rate.htm
+++ b/Content/30_3000/c2a.Set Link Rate.htm
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="611" MadCap:lastWidth="624">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="10" MadCap:lastHeight="596" MadCap:lastWidth="624">
     <head><title>The Help Menu</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Setting Link Rate &amp; AxC#</h2>
-        <h2 class="AA_Online_H2">Setting Link Rate &amp; AxC#</h2>
-        <p>The <i>CPRI</i> menu gives access to controls for both the CPRI link rate and the AxC&#160;(Radio) cell number.</p>
+        <h2 class="AA_h2_ChandPara" MadCap:conditions="Default.Print" MadCap:autonum="1.1. ">Setting the CPRI Link Rate</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Setting the CPRI Link Rate</h2>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col style="width: 15%;" />
             <col />
@@ -19,20 +18,19 @@
                 </tr>
                 <tr>
                     <td style="font-size: 10pt">GUI or Keyboard</td>
-                    <td style="font-size: 10pt;"><i>Auto Detect</i>at top center of Main Window</td>
-                    <td rowspan="3">
-                        <img src="../../Resources/Images/3000/3.1/Auto_Detect_Spd.jpg" style="height: auto;vertical-align: middle;clear: none;mc-float: none;margin-left: 0px;width: 250px;" />
+                    <td style="font-size: 10pt;"><i>None</i>
                     </td>
+                    <td rowspan="3">&#160;</td>
                 </tr>
                 <tr>
                     <td style="font-size: 10pt;">Classic menu</td>
-                    <td style="font-size: 10pt;"><b>CPRI &gt; Link Rate</b>
+                    <td style="font-size: 10pt;"><b>Source &gt; Link Rate</b>
                     </td>
                 </tr>
                 <tr>
                     <td style="font-size: 10pt">Modern menu
                     </td>
-                    <td style="font-size: 10pt;"><b>CPRI &gt; Link Rate</b>
+                    <td style="font-size: 10pt;"><b>Source &gt; Link Rate</b>
                     </td>
                 </tr>
             </tbody>
@@ -43,9 +41,10 @@
             <tbody>
                 <tr>
                     <td style="vertical-align: top;">
+                        <p style="vertical-align: top;">The <i>CPRI</i> menu gives access to controls for both the CPRI link rate and the AxC&#160;(Radio) cell number.</p>
                         <p style="vertical-align: top;">To set the link rate:</p>
                         <ol>
-                            <li style="vertical-align: top;">Go to the <b>CPRI</b> menu on either the <i>Classic</i> or <i>Modern</i> menu systems.</li>
+                            <li style="vertical-align: top;">Go to the <b>Source</b> menu on either the <i>Classic</i> or <i>Modern</i> menu systems.</li>
                             <li style="vertical-align: top;">Click on the <b>Link Rate</b> menu item.</li>
                             <li style="vertical-align: top;">
                                 <p>Select the desired Link Rate from the dropdown list, or 
@@ -59,7 +58,7 @@
                             <tbody>
                                 <tr>
                                     <td style="text-align: center;">
-                                        <img src="../../Resources/Images/3000/3.1/3k_link-rate.jpg" MadCap:mediastyle="@media print { width: auto;height: 150px; }" style="margin-bottom: 5px;width: auto;height: 150px;" />
+                                        <img src="../Resources/Images/3000/3.1/3k_link-rate.jpg" MadCap:mediastyle="@media print { width: auto;height: 150px; }" style="margin-bottom: 5px;width: auto;height: 150px;" />
                                     </td>
                                 </tr>
                                 <tr>
@@ -78,7 +77,7 @@
             <tbody>
                 <tr>
                     <td class="NOTE">
-                        <p><b>NOTE:</b> Once the correct link speed has been set</p>
+                        <p><b>NOTE:</b> Once the correct link rate has been set the <i>Link</i> state on the <i>Status Pane</i> shows as “<b style="color: #008000;">Active</b>”</p>
                     </td>
                 </tr>
             </tbody>
