--- a/Content/30_3000/c4.Spectrum Setup.htm
+++ b/Content/30_3000/c4.Spectrum Setup.htm
@@ -3,10 +3,8 @@
     <head><title>The Help Menu</title>
     </head>
     <body>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Setting up the Power Spectrum Graph</h2>
-        <h2 class="AA_Online_H2">Setting up the Power Spectrum Graph</h2>
-        <p>The way the spectrum graph is set up depends on which aspects of the signal you want to observe. Integris 3000 monitors 100% of the signal allowing you to zoom in to inspect a smaller frequency band or shift the graph down to see a spike.</p>
-        <p>There are controls to vary parameters related to signal Amplitude and Frequency.</p>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Power Spectrum Graph Setup</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Power Spectrum Graph Setup</h2>
         <h3>Amplitude</h3>
         <table style="width: 100%;border-spacing: 2px 10px;margin-left: auto;margin-right: auto;">
             <col />
@@ -23,6 +21,7 @@
                 </tr>
             </tbody>
         </table>
+        <p>The way you set the spectrum graph depends on which aspects of the signal you want to observe. Integris 3000 monitors 100% of the signal allowing you to zoom in to inspect a smaller frequency band or shift the graph down to see a spike.</p>
         <p>The Amplitude menu has four menu items, three of which open control panels with sliders and edit boxes to set values. <MadCap:xref href="#ampl" class="ListOfPageNumber">(See  Figure 1.2. )</MadCap:xref></p>
         <p> <i>Full Scale</i>' is used to return the graph to nominal values.</p>
         <table class="FigureTable">
@@ -30,7 +29,7 @@
             <tbody>
                 <tr>
                     <td style="text-align: center;">
-                        <img src="../../Resources/Images/3000/Amplitude_Menu_Modern01.jpg" MadCap:mediastyle="@media print { height: 130px;width: 128px; }" style="margin-top: 10px;margin-bottom: 0px;height: 130px;width: 128px;" />
+                        <img src="../Resources/Images/3000/Amplitude_Menu_Modern01.jpg" MadCap:mediastyle="@media print { height: 130px;width: auto; }" style="margin-top: 10px;margin-bottom: 0px;height: 130px;width: auto;" />
                     </td>
                 </tr>
                 <tr>
@@ -40,7 +39,6 @@
                 </tr>
             </tbody>
         </table>
-        <p style="vertical-align: top;">Use <b>Calibrate</b><![CDATA[  ]]>to  set the Y axis values (dBm). This has the effect of moving the base of the graph vertically on the screen and sets the base dBm of the spectrum graph.</p>
         <p style="vertical-align: top;"><b>Ref Level</b>  sets the position of the Y axis values on the screen. This has the effect of moving the base of the graph vertically on the screen.</p>
         <p style="vertical-align: top;"><b>Scale</b> Sets the spacing of the Y axis values for the power spectrum on-screen grid. This has the effect of condensing or expanding the graph vertically on the screen.</p>
         <p style="vertical-align: top;"><b style="vertical-align: top;">Full Scale</b> Sets the currently displayed spectrum's amplitude to maximum </p>
@@ -49,7 +47,7 @@
             <tbody>
                 <tr>
                     <td style="text-align: center;">
-                        <img src="../../Resources/Images/3000/3.1/3k_Ampl_Controls.jpg" MadCap:mediastyle="@media print { width: auto;height: 200px; }" style="height: 200px;margin-top: 10px;margin-bottom: 0px;" />
+                        <img src="../Resources/Images/3000/3.1/3k_Ampl_Controls.jpg" MadCap:mediastyle="@media print { width: auto;height: 200px; }" style="height: 200px;margin-top: 10px;margin-bottom: 0px;" />
                     </td>
                 </tr>
                 <tr>
@@ -76,23 +74,19 @@
                 </tr>
             </tbody>
         </table>
-        <p>The Frequency menu has five menu items, three of which open control panels with sliders and edit boxes to set values. <MadCap:xref href="#freq" class="ListOfPageNumber">(See  Figure 1.4. )</MadCap:xref></p>
-        <p style="text-align: center;">
-            <img src="../../Resources/Images/3000/3.1/3k_ModernFreqMenu-sml.jpg" />
-        </p>
+        <p>The Frequency menu has five menu items, three of which open control panels with sliders and edit boxes to set values. <MadCap:xref href="#fr-menu" class="ListOfPageNumber">(See  Fig 1.3 )</MadCap:xref></p>
         <table class="FigureTable">
             <col style="width: 50%;">
             </col>
             <tbody>
                 <tr>
                     <td style="text-align: center;">
-                        <img src="../../Resources/Images/3000/3.1/3k_ModernFreqMenu.jpg" MadCap:mediastyle="@media print { width: auto;height: 180px; }" style="margin-top: 10px;margin-bottom: 0px;height: 150px;">
-                        </img>
+                        <img src="../Resources/Images/3000/3.1/3k_ModernFreqMenu.jpg" style="width: auto;height: 250px;" />
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p class="FigNum01" MadCap:autonum=" Fig 1.3 ">Modern Amplitude Menu</p>
+                        <p class="FigNum01" MadCap:autonum=" Fig 1.3 "><a name="fr-menu"></a>Modern Amplitude Menu</p>
                     </td>
                 </tr>
             </tbody>
@@ -108,13 +102,13 @@
             <tbody>
                 <tr>
                     <td style="text-align: center;">
-                        <img src="../../Resources/Images/3000/3.1/3k_Freq_Controls.jpg" MadCap:mediastyle="@media print { width: auto;height: 200px; }" style="height: 200px;margin-top: 10px;margin-bottom: 0px;">
+                        <img src="../Resources/Images/3000/3.1/3k_Freq_Controls.jpg" MadCap:mediastyle="@media print { width: auto;height: 200px; }" style="height: 200px;margin-top: 10px;margin-bottom: 0px;">
                         </img>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <p class="FigNum01" MadCap:autonum=" Fig 1.4 ">Frequency Controls<a name="freq"></a></p>
+                        <p class="FigNum01" MadCap:autonum=" Fig 1.4 ">Modern Frequency Controls<a name="freq"></a></p>
                     </td>
                 </tr>
             </tbody>
