Delete of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/01_Introduction Topics/x.App1-Troubleshooting.htm

--- a/Content/03_Unpacking/x.App1-Troubleshooting.htm
+++ b/Content/03_Unpacking/x.App1-Troubleshooting.htm
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="3805" MadCap:lastWidth="1196">
-    <head>&#160;</head>
+    <head>
+        <link href="../Resources/Stylesheets/AA_styles.css" rel="stylesheet" type="text/css" />
+    </head>
     <body>
         <h1 class="AA_h1_Appendix" MadCap:autonum="Appendix A: ">Troubleshooting</h1>
         <h2>Troubleshooting</h2>
@@ -13,7 +15,7 @@
             <li>Make sure that all the device drivers are correctly installed.</li>
             <li>Make notes of your observations. Are there any messages on the screen? Do any indicators light? Do you hear any beeps? Detailed descriptions are useful to the service personnel when you need to consult one for assistance.</li>
         </ul>
-        <p>If any problem persists after you follow the instructions in this section, contact Absolute Analysis support staff for help at <MadCap:variable name="AA_DOC_Vars.WebAddressSupport" /></p>
+        <p>If any problem persists after you follow the instructions in this section, contact Absolute Analysis support staff for help at <MadCap:variable name="AA_S&amp;C_Vars.WebAddressSupport" /></p>
         <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Battery Problems</h2>
         <h2>Solving Battery Problems</h2>
         <p>The battery does not charge (Battery Charge indicator does not light amber).</p>
