Commit of file:///C:/Users/Haz/Documents/_Madcap Projects/INTEGRIS GLOBAL PROJECT/_INTEGRIS GLOBAL USER GUIDE/Content/03_Unpacking/b5.Reset.htm

--- a/Content/03_Unpacking/a.Unpacking.htm
+++ b/Content/03_Unpacking/a.Unpacking.htm
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="913" MadCap:lastWidth="1196">
+<html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" MadCap:lastBlockDepth="6" MadCap:lastHeight="827" MadCap:lastWidth="624">
     <head><title>Unpacking &amp; Connecting the System</title>
     </head>
     <body>
-        <h1 class="AA_Chpt_Heading1" MadCap:autonum="1. ">Unpacking the System</h1>
-        <h2>Unpacking the System</h2>
+        <h1 class="AA_Chpt_Heading1" MadCap:autonum="1. " MadCap:conditions="Default.Print">Unpacking the System</h1>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Unpacking the System</h2>
         <p>The System packaging should be opened with care. If you need to return the system in the future it would be preferable that the original packaging was reused.</p>
         <p>Remove the system from any protective packaging. </p>
         <p>After unpacking the shipping carton, you should find these standard items:</p>
@@ -14,8 +14,8 @@
             <li>Power Cord</li>
         </ul>
         <p>Inspect all the items. If any item is damaged or missing, notify Absolute Analysis support immediately.</p>
-        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. ">Operating Location Guidelines</h2>
-        <h2>Operating Location Guidelines</h2>
+        <h2 class="AA_h2_ChandPara" MadCap:autonum="1.1. " MadCap:conditions="Default.Print">Operating Location Guidelines</h2>
+        <h2 class="AA_Online_H2" MadCap:conditions="Default.Screen">Operating Location Guidelines</h2>
         <ul>
             <li>For optimal performance, use the computer where the recommended temperature is between 0 °C (32 °F) and 55 °C (131 °F). (Actual operating temperature depends on product specifications.)</li>
             <li>Avoid placing the computer in a location subject to high humidity, extreme temperatures, mechanical vibration, direct sunlight, or heavy dust. Using in extreme environments for long periods can result in product deterioration and a shortened product life.</li>
